--- a/src/asset/app.scss
+++ b/src/asset/app.scss
@@ -77,7 +77,7 @@ img[src^="static/face/"] {
       .info {
         word-break: break-all !important;
         font-size: 14px;
-        height: 45px;
+        // height: 45px;
         color: #252c2f;
         margin-bottom: 5px;
         overflow: hidden;
@@ -110,7 +110,7 @@ img[src^="static/face/"] {
         }
       }
       .noLine {
-        height: 102px !important;
+        height: 102px;
       }
       .link-media .attach {
         margin-bottom: 6px;
