--- a/src/asset/app.scss
+++ b/src/asset/app.scss
@@ -210,6 +210,7 @@ img[src^="static/face/"] {
     align-items: center;
     background-color: rgba(31, 45, 61, 0.11);
     cursor: pointer;
+    opacity: 0;
     i {
       color: #fff;
     }
